# car_rental_backend

./: .env  db.sqlite3  main.py  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
backend/: settings.py  urls.py
bookings/: exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
car_rental/: settings.py  urls.py
cars/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  views.py
cars/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
